[package]
name = "hooray"
version = "0.2.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "Fast software composition analysis and vulnerability scanning"
repository = "https://github.com/openhoo/hooray"
keywords = ["security", "vulnerability", "sbom", "osv", "cyclonedx"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hooray"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.20"
