[package]
name = "hooray"
version = "0.3.0"
edition = "2024"
rust-version = "1.90"
license = "MIT"
description = "Fast software composition analysis and vulnerability scanning"
repository = "https://github.com/openhoo/hooray"
keywords = ["security", "vulnerability", "sbom", "osv", "cyclonedx"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hooray"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
globset = "0.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
spdx = "0.10"
tar = "0.4"
thiserror = "2.0"
tokio = { version = "1.45", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "request-id", "trace"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
walkdir = "2.5"
zip = { version = "4.6", default-features = false, features = ["bzip2", "deflate", "zstd"] }

[dev-dependencies]
http-body-util = "0.1"
proptest = "1.7"
tempfile = "3.20"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
